# ChangeLog for x11-libs/libsexy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsexy/ChangeLog,v 1.55 2011/10/16 20:06:20 ssuominen Exp $

  16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> libsexy-0.1.11-r3.ebuild:
  Stabilize for everyone (only trivial change).

*libsexy-0.1.11-r3 (14 Sep 2011)

  14 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
  +libsexy-0.1.11-r3.ebuild, +files/libsexy-0.1.11-pkgconfig-pollution.patch:
  Use Libs.private instead of Libs to pass libraries for static linking wrt
  #380193 by Diego Elio Pettenò

  21 May 2011; Samuli Suominen <ssuominen@gentoo.org> libsexy-0.1.11-r2.ebuild:
  ppc/ppc64 stable wrt #361917

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> libsexy-0.1.11-r2.ebuild:
  alpha/arm/ia64/sh/sparc/x86 stable wrt #361917

  11 Apr 2011; Jeroen Roovers <jer@gentoo.org> libsexy-0.1.11-r2.ebuild:
  Stable for HPPA (bug #361917).

  05 Apr 2011; Christoph Mende <angelos@gentoo.org> libsexy-0.1.11-r2.ebuild:
  Stable on amd64 wrt bug #361917

  04 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> libsexy-0.1.11-r2.ebuild:
  USE="static-libs" and punt useless libtool archive.

  20 May 2010; Jeroen Roovers <jer@gentoo.org> libsexy-0.1.11-r1.ebuild:
  Stable for HPPA (bug #305521).

  18 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  libsexy-0.1.11-r1.ebuild:
  amd64 stable wrt #305521

  24 Mar 2010; Brent Baude <ranger@gentoo.org> libsexy-0.1.11-r1.ebuild:
  stable ppc, bug 305521

  16 Mar 2010; Raúl Porcel <armin76@gentoo.org> libsexy-0.1.11-r1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #305521

  04 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libsexy-0.1.11-r1.ebuild:
  x86 stable wrt bug #305521

  01 Mar 2010; Brent Baude <ranger@gentoo.org> libsexy-0.1.11-r1.ebuild:
  Marking libsexy-0.1.11-r1 ppc64 for bug 305521

*libsexy-0.1.11-r2 (25 Feb 2010)

  25 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  +libsexy-0.1.11-r2.ebuild: