@@ -4,18 +4,17 @@ Hash: SHA1
 AUX libsexy-0.1.11-fix-null-list.patch 1908 RMD160 8e50b3c1f56f494e66855414ceb62a982ce85bc6 SHA1 4831af6107fce5105ff6e395e80fd3dc5553eb55 SHA256 1e3e7bbe4eb231c67b572ac2dc7408274104c99a70238f69db51718a073811dc
 AUX libsexy-0.1.11-pkgconfig-pollution.patch 281 RMD160 fddc2998097f2ed82e688e500df2400f5069d9e2 SHA1 24be7e86ccc7b4a32d07b4771d5bf17614450950 SHA256 b83e84a0fd78b506ddf837f4b2ba6e4a71cbc03332356cf91a8766d34bc39284
 DIST libsexy-0.1.11.tar.bz2 267376 RMD160 3e0dd0be95776e600877f09b3bcc83d4656f4c59 SHA1 0b804d98d4746906c9546a26bb699dd51f80090d SHA256 ba113ff5148e9ac137381a1da7045caa750a3b0c0113d4b97549bdbb6c1c8bb6
-EBUILD libsexy-0.1.11-r2.ebuild 1320 RMD160 c71186acc18a47bed1a2d49b1e5a7718321987a6 SHA1 baa8db52f6ea212388fa3e10403a689aa8a4d851 SHA256 a6e7ad8a038ace92ec7fa7dc4dcf13732d6d7cea516976275a5229432aef65c7
 EBUILD libsexy-0.1.11-r3.ebuild 1313 RMD160 09894535f45f236cab137563122b885816a0c30a SHA1 16a24e46386128de4083794fe9e2ccb78fd1ffb4 SHA256 f18256bfb41214ebfe48c5d0a3ac473bab7edf6fcca9b6b7445c157b1896d6dc
-MISC ChangeLog 6793 RMD160 c7de0422994aca2fc1fabf7eaac97adb2a48996d SHA1 01ea92c20577ab9768f4cef1009fe3336b85dd9e SHA256 8c6b6d2e2e2f42fb6ae4521d1cd59ca8a8d037c9df6898aa6f80f05c7c5b007f
+MISC ChangeLog 6883 RMD160 d6652353685e01d8c815474925417397bc905ff5 SHA1 9f882bdc77b4f7176034c0d708f6fb763dcda5f4 SHA256 2df23e2f264d126cf82599a353c25664a60c0a12e70818b5729ee06b6c6cc824
 MISC metadata.xml 166 RMD160 5c642d8e45b484a15923871de6184d2576580cf8 SHA1 e829c9c3f6115637652b2124e34eb131fcdbcbb5 SHA256 9dd5c26b126ce4ce0fa6fd94105810917c675ee9ff30ffa63100e049ac66da04
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOmzkxAAoJEEdUh39IaPFNtT8H/AtiByUvhfXvDX4xKolSwwSs
-hvzefeii0Vlo3f1Dl0/s2np0DSR2oPkLq/GbuW13fJeoZ757JHnT90uZ6aTCJDnt
-KaknsKlN13+dvZT7fE/QRwoijAYVmz3VXzZ0FkRaJL6APtlMthHxG7GeZHgxmSee
-olO8llxASDeWJ9cS4B/AKjtHkD9410XlpWeXNxNUst3u9Q2jx1TVsriHKv3w5qIu
-7IMgXx1yon9xnlH0rzpIjyB3tLSfOAEa8+/4F27J5d0vUOyVr7wEkjh+smaR0ASL
-AmyWlbJo1lSWTlH9HJUHv5XAegTRV5RGZrTLXio8uKxkg4Epi2x4B03zgouB+6Y=
-=9uX7
+iQEcBAEBAgAGBQJOmzleAAoJEEdUh39IaPFN95EH/jtCHMM8IRCu3JNtsY+2MBDU
+Bf/bFe94DtJ1ZdUn95nG9wCBjm7yvjP80oraSPeo7K3JPE4K6Ka+5rT9eLlERXRe
+nGDO5EuSDReN+W11LKhS8T4Ce7GBeAd1khNlv4lRfdHCkPH4aqYSmV+uDJUEbA2z
+jK0kpGw4ZHLiGbdbzho4lGCL6Hx2ixa0rowBJ3YVaB9Xm0YJ89nE/W8IToxbOzh8
+EmC7OoeadoXBX7RikG437mJREjjXJTELV+XT0pYIZSxf0nm4kIu/xT6bNAgxUyQv
+tm2EbWq5ZArOd5uvizuQHip2l29G/XP2sf5uEnJ9ZMEdsh40AOWEPVLo6PDw0H8=
+=5dw0
 -----END PGP SIGNATURE-----
