@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libsexy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsexy/ChangeLog,v 1.55 2011/10/16 20:06:20 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libsexy/ChangeLog,v 1.56 2011/10/16 20:07:05 ssuominen Exp $
+
+  16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
+  -libsexy-0.1.11-r2.ebuild:
+  old
 
   16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> libsexy-0.1.11-r3.ebuild:
   Stabilize for everyone (only trivial change).
